Centralize navbar offset and clean up CSS variables
- Add .main-content wrapper in App.jsx to handle navbar height offset
- Remove duplicate navbar padding from all page styles
- Remove navbar spacer divs from 6 page components
- Consolidate CSS variables in global.css:
  - Add --bg-base and --starfield-gradient variables
  - Remove unused variables (--bg-primary, --bg-secondary, etc.)
  - Remove unused utility classes (.card, .card-glass, etc.)
- Update starfield and navbar to use CSS variables
- Move badge-specific background variables to BadgeCard/styles.css
- Simplify theme handling in index.html

--- a/starview_frontend/index.html
+++ b/starview_frontend/index.html
@@ -17,8 +17,9 @@
           document.documentElement.setAttribute('data-theme', 'light');
         }
 
-        // Set background color immediately to prevent white flash
-        document.documentElement.style.backgroundColor = theme === 'light' ? '#ffffff' : '#111827';
+        // SYNC WITH: global.css --bg-base variable
+        const bgBase = { dark: '#111827', light: '#ffffff' };
+        document.documentElement.style.backgroundColor = bgBase[theme];
       })();
     </script>
 
