Add theme-aware favicons and standardize modal backdrop styles

--- a/starview_frontend/index.html
+++ b/starview_frontend/index.html
@@ -6,6 +6,11 @@
     <meta name="description" content="Starview - Discover and share exceptional stargazing locations" />
     <title>Starview - Stargazing Location Reviews</title>
 
+    <!-- Favicons (theme-aware) -->
+    <link rel="icon" type="image/png" href="/images/logo-dark-short.png" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" type="image/png" href="/images/logo-light-short.png" media="(prefers-color-scheme: light)" />
+    <link rel="icon" type="image/png" href="/images/logo-dark-short.png" />
+
     <!-- Theme Script (inline to prevent flash) -->
     <script>
       (function() {
