--- a/starview_frontend/index.html
+++ b/starview_frontend/index.html
@@ -28,9 +28,10 @@
       })();
     </script>
 
-    <!-- Inter Font -->
-    <link rel="preconnect" href="https://rsms.me/">
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
+    <!-- Fonts: Karla (body) + Montserrat (display) -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&family=Montserrat:wght@500;600;700;800&display=swap">
 
     <!-- Font Awesome Kit -->
     <script src="https://kit.fontawesome.com/487246ab59.js" crossorigin="anonymous"></script>
