Add favicons, Open Graph, and social media meta tags
- Add theme-aware favicons (dark/light mode support) for browser tabs
- Add favicon.ico for legacy browser support
- Add apple-touch-icon for iOS home screen
- Add android-chrome icons and web manifest for PWA support
- Add Open Graph meta tags for Facebook/LinkedIn/Discord sharing
- Add Twitter Card meta tags for X sharing
- Add generate-icons.py script for easy regeneration when branding changes

--- a/starview_frontend/index.html
+++ b/starview_frontend/index.html
@@ -6,10 +6,41 @@
     <meta name="description" content="Starview - Discover and share exceptional stargazing locations" />
     <title>Starview - Stargazing Location Reviews</title>
 
-    <!-- Favicons (theme-aware) -->
-    <link rel="icon" type="image/png" href="/images/logo-dark-short.png" media="(prefers-color-scheme: dark)" />
-    <link rel="icon" type="image/png" href="/images/logo-light-short.png" media="(prefers-color-scheme: light)" />
-    <link rel="icon" type="image/png" href="/images/logo-dark-short.png" />
+    <!-- Favicons -->
+    <!-- Theme-aware favicons for browser tabs (32x32) -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-dark-32x32.png" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-light-32x32.png" media="(prefers-color-scheme: light)" />
+    <!-- Theme-aware favicons for browser tabs (16x16) -->
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-dark-16x16.png" media="(prefers-color-scheme: dark)" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-light-16x16.png" media="(prefers-color-scheme: light)" />
+    <!-- Fallback favicons (used when no media query matches) -->
+    <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png" />
+    <!-- Legacy browsers and PDF viewers (must stay at root for compatibility) -->
+    <link rel="icon" href="/favicon.ico" sizes="48x48" />
+    <!-- Apple Touch Icon (iOS home screen) -->
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
+    <!-- Web App Manifest (Android/PWA) -->
+    <link rel="manifest" href="/icons/site.webmanifest" />
+    <!-- Theme color for browser chrome -->
+    <meta name="theme-color" content="#111827" />
+
+    <!-- Open Graph Meta Tags (Facebook, LinkedIn, Discord, etc.) -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://starview.app/" />
+    <meta property="og:title" content="Starview - Stargazing Location Reviews" />
+    <meta property="og:description" content="Discover and share exceptional stargazing locations" />
+    <meta property="og:image" content="https://starview.app/icons/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:site_name" content="Starview" />
+
+    <!-- Twitter Card Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:url" content="https://starview.app/" />
+    <meta name="twitter:title" content="Starview - Stargazing Location Reviews" />
+    <meta name="twitter:description" content="Discover and share exceptional stargazing locations" />
+    <meta name="twitter:image" content="https://starview.app/icons/twitter-image.png" />
 
     <!-- Theme Script (inline to prevent flash) -->
     <script>
