Fix favicon for Google Search and Safari
- Add 48x48 favicon PNG (Google requires minimum 48px)
- Regenerate favicon.ico with 16, 24, 32, and 48px sizes
- Reorder favicon links: unconditional 48x48 first for search engines
- Keep theme-aware favicons for browser tabs

--- a/starview_frontend/index.html
+++ b/starview_frontend/index.html
@@ -7,17 +7,19 @@
     <title>Starview - Stargazing Location Reviews</title>
 
     <!-- Favicons -->
+    <!-- Primary favicon for search engines (Google requires 48x48+, no media queries) -->
+    <link rel="icon" type="image/png" sizes="48x48" href="/icons/favicon-48x48.png" />
+    <!-- Legacy .ico for older browsers and PDF viewers -->
+    <link rel="icon" href="/favicon.ico" sizes="48x48" />
     <!-- Theme-aware favicons for browser tabs (32x32) -->
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-dark-32x32.png" media="(prefers-color-scheme: dark)" />
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-light-32x32.png" media="(prefers-color-scheme: light)" />
     <!-- Theme-aware favicons for browser tabs (16x16) -->
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-dark-16x16.png" media="(prefers-color-scheme: dark)" />
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-light-16x16.png" media="(prefers-color-scheme: light)" />
-    <!-- Fallback favicons (used when no media query matches) -->
+    <!-- Fallback favicons for browsers without dark mode preference -->
     <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon-32x32.png" />
     <link rel="icon" type="image/png" sizes="16x16" href="/icons/favicon-16x16.png" />
-    <!-- Legacy browsers and PDF viewers (must stay at root for compatibility) -->
-    <link rel="icon" href="/favicon.ico" sizes="48x48" />
     <!-- Apple Touch Icon (iOS home screen) -->
     <link rel="apple-touch-icon" sizes="180x180" href="/icons/apple-touch-icon.png" />
     <!-- Web App Manifest (Android/PWA) -->
