Add JSON-LD WebSite schema for Google search site name

--- a/starview_frontend/index.html
+++ b/starview_frontend/index.html
@@ -27,6 +27,16 @@
     <!-- Theme color for browser chrome -->
     <meta name="theme-color" content="#111827" />
 
+    <!-- Structured Data for Google Search -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "WebSite",
+      "name": "Starview",
+      "url": "https://www.starview.app/"
+    }
+    </script>
+
     <!-- Open Graph Meta Tags (Facebook, LinkedIn, Discord, etc.) -->
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://starview.app/" />
