Add real HTTP 404 for unknown SPA routes and alternateName structured data
- Add VALID_REACT_ROUTES list to match App.jsx routes
- Return HTTP 404 status for invalid routes while still serving React app
- Add alternateName to WebSite JSON-LD schema for better Google recognition
- Fixes soft 404 issues in Google Search Console

--- a/starview_frontend/index.html
+++ b/starview_frontend/index.html
@@ -33,6 +33,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Starview",
+      "alternateName": "Starview",
       "url": "https://www.starview.app/"
     }
     </script>
