Complete design system migration with CSS variables
- Add new CSS variables to global.css:
  - --text-2xs (10px) for decorative text
  - --favorite, --favorite-hover for heart icons
  - --elevation for elevation indicators
  - --category-*-bg (7 vars) for badge category backgrounds
  - --tier-*-glow (3 vars) for badge tier effects
  - --overlay-bg for modal overlays
  - --pinned-badge-glow for badge drop-shadows

- Replace hardcoded values with CSS variables:
  - Star ratings: #fbbf24 → var(--star-filled)
  - Favorite colors: #ef4444 → var(--favorite)
  - Elevation: #f87171 → var(--elevation)
  - Font sizes: px values → --text-* variables
  - Badge tier glows: hsla() → var(--tier-*-glow)
  - Category backgrounds: rgba() → var(--category-*-bg)

- Files updated:
  - Home, Login, Register, NotFound pages
  - LocationCard, ExploreMap components
  - BadgeCard, BadgeCompact, BadgeModal, PinnedBadges
  - ErrorBoundary, global.css

- Light/dark theme support for all new variables

--- a/starview_frontend/index.html
+++ b/starview_frontend/index.html
@@ -67,7 +67,7 @@
         }
 
         // SYNC WITH: global.css --bg-base variable
-        const bgBase = { dark: '#111827', light: '#ffffff' };
+        const bgBase = { dark: '#0a0f1a', light: '#f8fafc' };
         document.documentElement.style.backgroundColor = bgBase[theme];
       })();
     </script>
@@ -87,10 +87,10 @@
       })();
     </script>
 
-    <!-- Fonts: Karla (body) + Montserrat (display) -->
+    <!-- Fonts: Karla (body) + Montserrat + Outfit (display) + JetBrains Mono (technical) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&family=Montserrat:wght@500;600;700;800&display=swap">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;500;600&family=Karla:wght@400;500;600;700&family=Montserrat:wght@500;600;700;800&family=Outfit:wght@400;500;600;700&display=swap">
 
     <!-- Font Awesome Kit -->
     <script src="https://kit.fontawesome.com/487246ab59.js" crossorigin="anonymous"></script>
