Add site-wide footer component
- Create Footer component with navigation, social links, and legal info
- Observatory-themed design with glass-morphic styling and glow effects
- Theme-aware logo that switches between light/dark modes
- Responsive layout with mobile-optimized stacking
- Include decorative constellation SVG and status indicator
- Update page-wrapper to use flexbox for sticky footer behavior
- Add WebView detection script for proper viewport height handling

--- a/starview_frontend/index.html
+++ b/starview_frontend/index.html
@@ -72,6 +72,28 @@
       })();
     </script>
 
+    <!-- WebView Detection + Viewport Height (inline to prevent layout shift) -->
+    <script>
+      (function() {
+        var ua = navigator.userAgent || '';
+        // Detect Google Search App (GSA), Facebook, Instagram, TikTok, and generic WebViews
+        var isWebView = /GSA\/|FBAN|FBAV|Instagram|TikTok|\bwv\b|WebView/i.test(ua);
+
+        if (isWebView) {
+          document.documentElement.classList.add('webview-browser');
+
+          // Set actual viewport height as CSS variable (in pixels)
+          var setViewportHeight = function() {
+            document.documentElement.style.setProperty('--actual-vh', window.innerHeight + 'px');
+          };
+          setViewportHeight();
+
+          // Update on resize (orientation change)
+          window.addEventListener('resize', setViewportHeight);
+        }
+      })();
+    </script>
+
     <!-- Suppress noisy Mapbox warnings in production -->
     <script>
       (function() {
