--- a/starview_frontend/index.html
+++ b/starview_frontend/index.html
@@ -116,6 +116,15 @@
 
     <!-- Font Awesome Kit -->
     <script src="https://kit.fontawesome.com/487246ab59.js" crossorigin="anonymous"></script>
+
+    <!-- Google Analytics (GA4) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-69FRLLFMDK"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-69FRLLFMDK');
+    </script>
   </head>
   <body>
     <div id="root"></div>
