fix: Prevent WebView viewport height updates on browser UI resize
Only update --actual-vh on orientation change instead of resize events.
Mobile in-app browsers (Google Search, Facebook, Instagram) fire resize
events when the browser UI shows/hides during scroll, causing unwanted
layout shifts in the photo gallery and other pages.

--- a/starview_frontend/index.html
+++ b/starview_frontend/index.html
@@ -83,13 +83,18 @@
           document.documentElement.classList.add('webview-browser');
 
           // Set actual viewport height as CSS variable (in pixels)
+          // Only set once on load - don't update on resize to prevent layout shifts
+          // when browser UI shows/hides during scroll
           var setViewportHeight = function() {
             document.documentElement.style.setProperty('--actual-vh', window.innerHeight + 'px');
           };
           setViewportHeight();
 
-          // Update on resize (orientation change)
-          window.addEventListener('resize', setViewportHeight);
+          // Only update on orientation change, not resize (browser UI causes resize events)
+          window.addEventListener('orientationchange', function() {
+            // Delay to allow browser to settle after orientation change
+            setTimeout(setViewportHeight, 100);
+          });
         }
       })();
     </script>
